# chip8-dasm

./: .flake8  .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
src/chip8_dasm/: __main__.py  cli.py  disassembler.py  insight.py  loader.py  writer.py
tests/: test_decode.py  test_interface.py  test_opcodes.py
