[tool.poetry]
name = "chip8-dasm"
version = "0.1.0"
description = "A CHIP-8 Disassembler"
license = "MIT"
authors = ["Jeff Nyman <jeffnyman@gmail.com>"]
repository = "https://github.com/jeffnyman/chip8-dasm"
keywords = [
  "chip-8",
  "disassembler"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
c8dasm = "chip8_dasm.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
