[tool.poetry]
name = "chip8-dasm"
version = "0.1.0"
description = "A CHIP-8 Disassembler"
license = "MIT"
authors = ["Jeff Nyman <jeffnyman@gmail.com>"]
repository = "https://github.com/jeffnyman/chip8-dasm"
keywords = [
  "chip-8",
  "disassembler"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
expects = "^0.9.0"
coverage = {version = "^5.3.1", extras = ["toml"]}
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
c8dasm = "chip8_dasm.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["chip8_dasm"]
omit = ["src/chip8_dasm/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["def main()"]

[tool.coverage.html]
show_contexts = true
title = "CHIP-8 Disassembler Test Coverage"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
